[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/RandomEvents/RandomEventMenu.gd" type="Script" id=1]

[node name="RandomEventMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1037.0
margin_bottom = 610.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EventNameLabel" type="Label" parent="."]
margin_left = 282.0
margin_top = 49.0
margin_right = 734.0
margin_bottom = 107.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EventDescLabel" type="Label" parent="."]
margin_left = 196.0
margin_top = 175.0
margin_right = 905.0
margin_bottom = 358.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EventValuesLabel" type="Label" parent="."]
margin_left = 247.344
margin_top = 384.719
margin_right = 837.344
margin_bottom = 449.719
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OKButton" type="Button" parent="."]
margin_left = 479.208
margin_top = 508.574
margin_right = 591.208
margin_bottom = 571.574
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="OKButton" to="." method="_on_OKButton_pressed"]
